tests/ui/borrowck/borrowck-imm-ref-to-mut-rec-field-issue-3162-c.stderr
error[E0506]: cannot assign to `_a` because it is borrowed
  --> $DIR/borrowck-imm-ref-to-mut-rec-field-issue-3162-c.rs:6:9
   |
LL |     let b = &mut _a;
   |             ------- `_a` is borrowed here
...
LL |         _a = 4;
   |         ^^^^^^ `_a` is assigned to here but it was already borrowed
...
LL |     drop(b);
   |          - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
